# TA

./: .gitignore  .pre-commit-config.yaml  Assethandler.py  CalculateHash.py  ConvertItems.py  Docs.md  Effect.py  Entities.py  Inputparser.py  Inputpraser.py  Items.py  Level.py  Player.py  README.md  Utils.py  __init__.py  actionparser.py  errorhandler.py  funny-min-jung.py  notes.md  requirements.txt  ta.csv  table.csv  test_entities.py
.github/workflows/: Effectschema.json  Entitieschema.json  Itemschema.json  Levelschema.json  checkjson.properties.json  checkjson.yml  entitieschema.json  entityschema.json  itemschema.json  levelschema.json  lintingcheck.yml  schema.json
Docs/: Actionparser  Actionparser.md  Assethandler.md  Docs.md  Effects.md  HowToDocStrings.md  Items.csv  Lore.md  Snippets.py
Test/: Anderthalbhaender.json  Breitschwert.json  Dornenhandschuh.json  Katar.json  Liandia.json  Stick.json
Utils/: Debug.py  Inputparser.py  __init__.py  ai.py  dbg.py  dice.py  hud.py  inp.py  logger.py  loot.py  pr.py  scolors.py  tcolors.py
Utils/GECK/: geck.py  (+1 more)
config/: __init__.py  commands.json  config.py  effects.json  entities.json  integrity.md  items.json  levels.json
releases/pypi/TA_package_test/: README.md  pyproject.toml  setup.py
releases/pypi/TA_package_test/hsmm/: Effect.py  Entities.py  Inputpraser.py  Level.py  README.md  Utils.py  __init__.py  actionparser.py  requirements.txt
releases/pypi/TA_package_test/hsmm/Docs/: Actionparser.md
releases/pypi/TA_package_test/hsmm/conf/: config.py  effects.json  entities.json  items.json  levels.json
(+132 files in other folders)
